Fix donation bottom spacing, sass imports, and striped table background colors

--- a/src/styles/components/table.sass
+++ b/src/styles/components/table.sass
@@ -22,8 +22,8 @@ $table-row-hover-background-color: $color-white
 $table-row-active-background-color: $primary
 $table-row-active-color: $color-white
 
-$table-striped-row-even-background-color: $color-lighter-gray
-$table-striped-row-even-hover-background-color: $color-lighter-gray
+$table-striped-row-even-background-color: #f5f5f5
+$table-striped-row-even-hover-background-color: #f5f5f5
 
 .table
   +block
@@ -128,7 +128,6 @@ $table-striped-row-even-hover-background-color: $color-lighter-gray
 .table
   font-size: $font-size-body-normal
   line-height: 1.5
-
 
 .is-responsive
   @media only screen and (max-width: 760px), (min-device-width: $tablet) and (max-device-width: $desktop)
